--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@ html{
 
 *, *::after, *::before{
     box-sizing: border-box;
-    margin: : 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
+    margin:0;
+    padding:0;    
 }
 
 .banner{
